# enkron.github.io

./: .gitignore  .yamllint  404.html  CLAUDE.md  Cargo.toml  Makefile  README.md  cleanup.sh  hello.html  pre-ci.sh
.github/workflows/: build_site.yml
content/: hello.md
css/: main.css  style.css  styles.css
hooks/: README.md  install-hooks.sh  pre-push
in/: cv.md  index.md  junkyard.md
in/entries/: 1-initial.md  2-local-nat-based-networking.md  3-ipv6-local-networking.md  initial.md
in/entries/shadow/: 1-initial.enc
plans/: edit-command-implementation.md
src/: crypto.rs  lib.rs  main.rs  pdf.rs  rend.rs  templates.rs  work_period.rs
tests/: cli_integration.rs
