[package]
name = "enkronio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "enkronio"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
anyhow = "1"
walkdir = "2"
pulldown-cmark = "0.9.2"
once_cell = "1"
sha2 = "0.10"
regex = "1"

# WASM dependencies
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Storage", "Window", "MediaQueryList", "EventTarget"] }
