[package]
name = "enkronio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "enkronio"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
anyhow = "1"
walkdir = "2"
pulldown-cmark = "0.9.2"
once_cell = "1"
sha2 = "0.10"
regex = "1"
clap = { version = "4", features = ["derive"] }

# Cryptography dependencies
aes-gcm = "0.10"          # AES-256-GCM authenticated encryption
argon2 = "0.5"            # Argon2id key derivation function
rand = "0.8"              # Random number generation
getrandom = { version = "0.2", features = ["js"] }  # WASM random support
rpassword = "7"           # Secure password input without echo
base64 = "0.22"           # Base64 encoding for HTML embedding
serde = { version = "1", features = ["derive"] }
serde_json = "1"          # JSON for lockfile tracking
zeroize = "1.8"           # Secure memory clearing

# WASM dependencies
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Storage", "Window", "MediaQueryList", "EventTarget", "HtmlInputElement", "Event", "KeyboardEvent"] }

[dev-dependencies]
tempfile = "3"
